--- a/Assignment 1/driver.html
+++ b/Assignment 1/driver.html
@@ -29,5 +29,23 @@
     <canvas id="webgl" width="400" height="400">
       Please use a browser that supports "canvas"
     </canvas>
+	<p> <button onClick="clearScreen()" type="button"> Clear Canvas </button> </p>
+	<p> <form>
+			Drawing Mode:<br>
+			<input type="radio" name="gender" value="Triangle" checked> Triangle
+			<input type="radio" name="gender" value="Square"> Square
+			<input type="radio" name="gender" value="Circle"> Circle <br> <br>
+			Shape Color:<br>
+			<input type="range" min="1" max="255" value="50" class="slider" id="Red"> Red <br>
+			<input type="range" min="1" max="255" value="50" class="slider" id="Green"> Green <br>
+			<input type="range" min="1" max="255" value="50" class="slider" id="Blue">  Blue <br> <br>
+			Shape Size:<br>
+			<input type="range" min="1" max="100" value="50" class="slider" id="Size"> <br>
+			(Circle) Segment Count: <br>
+			<input type="range" min="3" max="30" value="10" class="slider" id="Segments"> <br>
+			
+		</form> 
+	</p>
+
   </body>
 </html>
