Added triangle functionality (x/y/size)

--- a/Assignment 1/driver.html
+++ b/Assignment 1/driver.html
@@ -29,7 +29,7 @@
     <canvas id="webgl" width="400" height="400">
       Please use a browser that supports "canvas"
     </canvas>
-	<p> <button onClick="clearScreen()" type="button"> Clear Canvas </button> </p>
+	<p> <button onClick="clearScreen()" type="button" id="clear"> Clear Canvas </button> </p>
 	<p> <form>
 			Drawing Mode:<br>
 			<input type="radio" name="gender" value="Triangle" checked> Triangle
