Added circle functionality

--- a/Assignment 1/driver.html
+++ b/Assignment 1/driver.html
@@ -12,6 +12,8 @@
       <script src = "src/graphics/geometry/vertex.js"></script>
       <script src = "src/graphics/geometry/shapes/triangle.js"></script>
       <script src = "src/graphics/geometry/shapes/square.js"></script>
+      <script src = "src/graphics/geometry/shapes/circle.js"></script>
+
 
       <!-- Include external libs -->
       <script src = "lib/webgl-utils.js"></script>
