--- a/Assignment 2/drive.html
+++ b/Assignment 2/drive.html
@@ -2,34 +2,35 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-  <title> CMPS160 Assignment 2 - wckoch </title>
+  <title> CMPS160 Base Code </title>
+
 
   <!--Import CSS Styling-->
   <link rel="stylesheet" href="drive.css">
-
-  <!-- Include Base code libs -->
-  <script src="src/main.js"></script>
-  <script src="src/input.js"></script>
-  <script src="src/graphics/renderer.js"></script>
-  <script src="src/graphics/scene.js"></script>
-  <script src="src/graphics/geometry/geometry.js"></script>
-  <script src="src/graphics/geometry/vertex.js"></script>
-  <script src="src/graphics/geometry/shapes/triangle.js"></script>
-  <script src="src/graphics/geometry/shapes/square.js"></script>
-  <script src="src/graphics/geometry/shapes/circle.js"></script>
-
 
   <!-- Include external libs -->
   <script src="lib/webgl-utils.js"></script>
   <script src="lib/webgl-render.js"></script>
   <script src="lib/webgl-debug.js"></script>
+  <script src="lib/webgl-loader.js"></script>
   <script src="lib/cuon-utils.js"></script>
   <script src="lib/cuon-matrix.js"></script>
-  <script src="lib/load-file.js"></script>
 
   <!-- Include shaders -->
   <script src="src/graphics/shaders/shader.js"></script>
   <script src="src/graphics/shaders/asg1.js"></script>
+
+  <!-- Include Base code -->
+  <script src="src/graphics/geometry/vertex.js"></script>
+  <script src="src/graphics/geometry/geometry.js"></script>
+  <script src="src/graphics/geometry/shapes/triangle.js"></script>
+  <script src="src/graphics/geometry/shapes/square.js"></script>
+  <script src="src/graphics/geometry/shapes/circle.js"></script>
+  <script src="src/graphics/geometry/shapes/custom.js"></script>
+  <script src="src/graphics/renderer.js"></script>
+  <script src="src/graphics/scene.js"></script>
+  <script src="src/main.js"></script>
+  <script src="src/input.js"></script>
 </head>
 
 <body onload="main()" style="margin-top: 0px">
