--- a/Assignment 3/driver.html
+++ b/Assignment 3/driver.html
@@ -11,7 +11,7 @@
 
     <!-- Buttons to load and print file content -->
     <br><br>
-    Select File: <input type="file" id="fileInput"/>
+    Select File: <input type="file" id="fileInput"/><br>
     Select Texture: <input type="file" id="texInput"/>
     <button type="button" id="fileLoad">Print file content</button>
 
