--- a/Assignment 3/drive.html
+++ b/Assignment 3/drive.html
@@ -19,6 +19,8 @@
   <!-- Include shaders -->
   <script src="src/graphics/shaders/shader.js"></script>
   <script src="src/graphics/shaders/asg1.js"></script>
+  <script src = "src/graphics/shaders/asg3.js"></script>
+
 
 
   <!-- Include Base code -->
@@ -45,7 +47,7 @@
             Please use a browser that supports "canvas"
           </canvas>
         </div>
-        <div> <button class="button button1" onclick="clear()" type="button" id="clear"> Clear Canvas </button> </div>
+        <div> <button class="button button1" onclick="clear()" type="button" id="clear" style="padding-top: 5px"> Clear Canvas </button> </div>
       </div>
     </div>
     <div class="column">
@@ -63,14 +65,13 @@
           <input type="range" min="1" max="255" value="0" class="slider" id="Green"> &nbsp;Green <br>
           <input type="range" min="1" max="255" value="0" class="slider" id="Blue"> &nbsp;Blue <br>
 
-
-
           <div class="selectionlabel"> <b>Shape Size: </b></div>
           <input type="range" min="1" max="100" value="20" class="slider" id="Size"> <br>
           <div class="selectionlabel"> <b>Circle Segments: </b></div>
           <input type="range" min="3" max="30" value="10" class="slider" id="Segments"> <br>
 
           Set object: <input type="file" id="fileInput" style="padding-bottom: 5" /><br>
+          Select Texture: <input type="file" id="texInput" style="padding-bottom: 5"/><br>
           <button type="button" id="fileLoad">Draw Object to Screen</button> <br>
 
         </div>
