--- a/Assignment 3/drive.html
+++ b/Assignment 3/drive.html
@@ -53,7 +53,8 @@
     <div class="column">
       <div class="bordercontainer" style="padding-left: 15px; padding-bottom: 15px; display: inline-block">
         <div>
-          <div class="selectionlabel"> <b>Drawing Mode: </b></div>
+          <div class="selectionlabel"> <b>Drawing Mode: </b></div> 
+          &nbsp;&nbsp;&nbsp;&nbsp; <input type="button" value="Solid Color" id="colorType"><br>
           <input type="radio" name="gender" value="SpinSquare" id="spinsquare" checked>&nbsp;Spinning Square <br>
           <input type="radio" name="gender" value="FlucTriangle" id="fluctriangle">&nbsp;Fluctuating Triangle <br>
           <input type="radio" name="gender" value="RandCircle" id="randcircle">&nbsp;Randomly Moving Circles <br>
