--- a/Assignment 3/drive.html
+++ b/Assignment 3/drive.html
@@ -27,7 +27,7 @@
   <script src="src/graphics/geometry/vertex.js"></script>
   <script src="src/graphics/geometry/geometry.js"></script>
   <script src="src/graphics/geometry/shapes/triangle.js"></script>
-  <script src="src/graphics/geometry/shapes/triangleExam.js"></script>
+  <script src="src/graphics/geometry/shapes/texCube.js"></script>
   <script src="src/graphics/geometry/shapes/square.js"></script>
   <script src="src/graphics/geometry/shapes/circle.js"></script>
   <script src="src/graphics/geometry/shapes/cube.js"></script>
@@ -56,10 +56,10 @@
         <div>
           <div class="selectionlabel"> <b>Drawing Mode: </b></div> 
           &nbsp;&nbsp;&nbsp;&nbsp; <input type="button" value="Solid Color" id="colorType"><br>
-          <input type="radio" name="gender" value="SpinSquare" id="spinsquare" checked>&nbsp;Spinning Square <br>
+          <input type="radio" name="gender" value="SpinSquare" id="spinsquare" >&nbsp;Spinning Square <br>
           <input type="radio" name="gender" value="FlucTriangle" id="fluctriangle">&nbsp;Fluctuating Triangle <br>
           <input type="radio" name="gender" value="RandCircle" id="randcircle">&nbsp;Randomly Moving Circles <br>
-          <input type="radio" name="gender" value="TiltCube" id="tiltcube">&nbsp;Tilted Cube <br>
+          <input type="radio" name="gender" value="TiltCube" id="tiltcube" checked>&nbsp;Tilted Cube <br>
 
 
           <div class="selectionlabel"> <b>Shape Color: </b></div>
@@ -68,7 +68,7 @@
           <input type="range" min="1" max="255" value="0" class="slider" id="Blue"> &nbsp;Blue <br>
 
           <div class="selectionlabel"> <b>Shape Size: </b></div>
-          <input type="range" min="1" max="100" value="20" class="slider" id="Size"> <br>
+          <input type="range" min="1" max="100" value="80" class="slider" id="Size"> <br>
           <div class="selectionlabel"> <b>Circle Segments: </b></div>
           <input type="range" min="3" max="30" value="10" class="slider" id="Segments"> <br>
 
