--- a/Assignment 4/driver.html
+++ b/Assignment 4/driver.html
@@ -1,7 +1,7 @@
 <html lang="en">
   <head>
       <meta charset="utf-8"/>
-      <title> CMPS160 Lab 3 Intro </title>
+      <title> CMPS160 Base Code </title>
   </head>
 
   <body onload = "main()">
@@ -11,8 +11,7 @@
 
     <!-- Buttons to load and print file content -->
     <br><br>
-    Select File: <input type="file" id="fileInput"/><br>
-    Select Texture: <input type="file" id="texInput"/>
+    Select File: <input type="file" id="fileInput"/>
     <button type="button" id="fileLoad">Print file content</button>
 
     <!-- Example Slider -->
@@ -29,7 +28,7 @@
 
     <!-- Include shaders -->
     <script src = "src/graphics/shaders/shader.js"></script>
-    <script src = "src/graphics/shaders/asg3.js"></script>
+    <script src = "src/graphics/shaders/asg4.js"></script>
 
     <!-- Include Base code -->
     <script src = "src/graphics/geometry/vertex.js"></script>
@@ -38,6 +37,7 @@
     <script src = "src/graphics/geometry/shapes/custom.js"></script>
     <script src = "src/graphics/renderer.js"></script>
     <script src = "src/graphics/scene.js"></script>
+    <script src = "src/graphics/camera.js"></script>
     <script src = "src/main.js"></script>
     <script src = "src/input.js"></script>
   </body>
