--- a/Assignment 4/drive.html
+++ b/Assignment 4/drive.html
@@ -28,6 +28,7 @@
   <script src="src/graphics/geometry/vertex.js"></script>
   <script src="src/graphics/geometry/geometry.js"></script>
   <script src="src/graphics/geometry/shapes/triangle.js"></script>
+  <script src="src/graphics/geometry/shapes/land.js"></script>
   <script src="src/graphics/geometry/shapes/texCube.js"></script>
   <script src="src/graphics/geometry/shapes/square.js"></script>
   <script src="src/graphics/geometry/shapes/circle.js"></script>
