--- a/Final Project/drive.html
+++ b/Final Project/drive.html
@@ -28,6 +28,8 @@
   <script src="src/graphics/geometry/geometry.js"></script>
   <script src="src/graphics/geometry/shapes/asteroid.js"></script>
   <script src="src/graphics/geometry/shapes/ship.js"></script>
+  <script src="src/graphics/geometry/shapes/explosion.js"></script>
+  <script src="src/graphics/geometry/shapes/bullet.js"></script>
   <script src="src/graphics/renderer.js"></script>
   <script src="src/graphics/scene.js"></script>
   <script src="src/main.js"></script>
