Huge functionality update

--- a/Final Project/drive.html
+++ b/Final Project/drive.html
@@ -42,10 +42,12 @@
     <div class="column">
       <div>
         <div>
-          <canvas id="webgl" width="600" height="600" style="position: absolute; z-index: 0">
+          <canvas id="webgl" width="600" height="600">
             Please use a browser that supports "canvas"
           </canvas>
-
+          <!-- <canvas id="hud" width="600" height="600">
+            Please use a browser that supports "canvas"
+          </canvas> -->
         </div>
         <div> <button class="button button1" onclick="clear()" type="button" id="clear" style="padding-top: 5px"> Restart </button> </div>
       </div>
