--- a/Final Project/drive.html
+++ b/Final Project/drive.html
@@ -30,6 +30,7 @@
   <script src="src/graphics/geometry/shapes/ship.js"></script>
   <script src="src/graphics/geometry/shapes/explosion.js"></script>
   <script src="src/graphics/geometry/shapes/bullet.js"></script>
+  <script src="src/graphics/geometry/shapes/square.js"></script>
   <script src="src/graphics/renderer.js"></script>
   <script src="src/graphics/scene.js"></script>
   <script src="src/main.js"></script>
@@ -45,11 +46,11 @@
           <canvas id="webgl" width="600" height="600">
             Please use a browser that supports "canvas"
           </canvas>
-          <!-- <canvas id="hud" width="600" height="600">
+          <!-- <canvas id="hud" width="600" height="100">
             Please use a browser that supports "canvas"
           </canvas> -->
         </div>
-        <div> <button class="button button1" onclick="clear()" type="button" id="clear" style="padding-top: 5px"> Restart </button> </div>
+        <div> <button class="button button1" onclick="clear()" type="button" id="clear" style="padding-top: 5px"> Reload Page </button> </div>
       </div>
     </div>
     </div>
