--- a/Final Project/drive.html
+++ b/Final Project/drive.html
@@ -43,12 +43,12 @@
     <div class="column">
       <div>
         <div>
-          <canvas id="webgl" width="600" height="600">
+          <canvas id="webgl" width="600" height="600" style="position: absolute; z-index: 0">
             Please use a browser that supports "canvas"
           </canvas>
-          <!-- <canvas id="hud" width="600" height="100">
+          <canvas id="hud" width="600" height="600" style="position: absolute; z-index: 1">
             Please use a browser that supports "canvas"
-          </canvas> -->
+          </canvas>
         </div>
         <div> <button class="button button1" onclick="clear()" type="button" id="clear" style="padding-top: 5px"> Reload Page </button> </div>
       </div>
